[package]
name = "IronPE"
version = "1.0.0"
edition = "2021"
authors = ["ISSAC"]
description = "A Rust Loader for x86 and x64 binaries"

[dependencies]
colored = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
] }

[[bin]]
name = "IronPE"
path = "src/main.rs"